--- a/pms/views/product_pricelist_item_views.xml
+++ b/pms/views/product_pricelist_item_views.xml
@@ -26,4 +26,25 @@
             </xpath>
         </field>
     </record>
+    <record id="product_pricelist_item_view_tree" model="ir.ui.view">
+        <field name="model">product.pricelist.item</field>
+        <field name="arch" type="xml">
+            <tree>
+                 <field name="pricelist_id" />
+                 <field string="Applicable on" name="name" />
+                 <field name="date_start_overnight" />
+                 <field name="date_end_overnight" />
+                 <field name="price" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="product_pricelist_item_action2" model="ir.actions.act_window">
+        <field name="name">Pricelists Items</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.pricelist.item</field>
+        <field name="context">{'group_by':'pricelist_id'}</field>
+        <field name="view_id" ref="product_pricelist_item_view_tree" />
+        <field name="view_mode">tree</field>
+    </record>
 </odoo>
