--- a/pms/wizards/wizard_split_join_swap_reservation.xml
+++ b/pms/wizards/wizard_split_join_swap_reservation.xml
@@ -66,7 +66,7 @@
                         class="col-12"
                         attrs="{'invisible': [('operation','!=','swap')]}"
                     >
-                        <field name="reservations" nolabel="1" readonly="1">
+                        <field name="reservation_ids" nolabel="1" readonly="1">
                             <tree>
                                 <field string="Reservation" name="name" />
                                 <field name="checkin" />
