--- a/pms_l10n_es/views/pms_property_views.xml
+++ b/pms_l10n_es/views/pms_property_views.xml
@@ -8,12 +8,32 @@
         <field name="inherit_id" ref="pms.pms_property_views_form" />
         <field name="arch" type="xml">
             <xpath expr="//page[@name='property_settings']" position="inside">
-                    <group name="property_data" string="Settings of guest information">
-                        <field name="institution" />
-                        <field name="institution_property_id" />
-                        <field name="institution_user" />
-                        <field name="institution_password" />
-                    </group>
+
+                <div class="row">
+                    <div class="col-12">
+                        <div class="o_horizontal_separator">
+                            Guest information sending settings
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <group name="property_data">
+                            <field name="institution" />
+                            <field name="institution_property_id" />
+                        </group>
+                    </div>
+                    <div class="col-6 px-0">
+                         <group name="property_data">
+                            <field name="institution_user" />
+                            <field name="institution_password" password="True" />
+                         </group>
+                         <button
+                            name="test_gc_connection"
+                            class="btn btn-primary btn-sm"
+                            type="object"
+                            string="Test user/password"
+                        />
+                    </div>
+                </div>
             </xpath>
         </field>
     </record>
