[REF] pms and pms_l10n_es: refactor checkin_partner/res_partner fields

--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -29,10 +29,17 @@
                         <group name="group_left">
                             <field
                                 name="partner_id"
-                                required="True"
                                 domain="[('is_company','=', False)]"
                             />
-                            <field name="name" />
+                            <field name="firstname"/>
+                            <field name="lastname" />
+                            <field name="lastname2" />
+                            <field name="gender" />
+                            <field name="birthdate_date" />
+                            <field name="document_type" />
+                            <field name="document_number" />
+                            <field name="document_expedition_date" />
+                            <field name="nationality_id" />
                             <field name="pms_property_id" invisible="1" />
                             <field name="arrival" />
                             <field name="departure" />
@@ -70,7 +77,15 @@
                 />
                 <field name="identifier" />
                 <field name="partner_id" />
-                <field name="name" />
+                <field name="firstname"/>
+                <field name="lastname" />
+                <field name="lastname2" />
+                <field name="gender" />
+                <field name="birthdate_date" />
+                <field name="document_type" />
+                <field name="document_number" />
+                <field name="document_expedition_date" />
+                <field name="nationality_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -107,7 +122,15 @@
                 <field name="reservation_id" />
                 <field name="pms_property_id" invisible="1" />
                 <field name="partner_id" domain="[('is_company','=', False)]" />
-                <field name="name" />
+                <field name="firstname"/>
+                <field name="lastname" />
+                <field name="lastname2" />
+                <field name="gender" />
+                <field name="birthdate_date" />
+                <field name="document_type" />
+                <field name="document_number" />
+                <field name="document_expedition_date" />
+                <field name="nationality_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" invisible="1" />
@@ -139,7 +162,17 @@
                 />
                 <field name="identifier" />
                 <field name="partner_id" domain="[('is_company','=', False)]" />
-                <field name="name" />
+                 <field name="reservation_id" />
+                <field name="pms_property_id" invisible="1" />
+                <field name="firstname"/>
+                <field name="lastname" />
+                <field name="lastname2" />
+                <field name="gender" />
+                <field name="birthdate_date" />
+                <field name="document_type" />
+                <field name="document_number" />
+                <field name="document_expedition_date" />
+                <field name="nationality_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -167,11 +200,21 @@
             >
                 <field name="id" />
                 <field name="identifier" />
-                <field name="partner_id" />
                 <field name="reservation_id" />
                 <field name="folio_id" />
                 <field name="pms_property_id" />
-                <field name="name" />
+                 <field name="reservation_id" />
+                <field name="pms_property_id" invisible="1" />
+                <field name="partner_id" domain="[('is_company','=', False)]" />
+                <field name="firstname"/>
+                <field name="lastname" />
+                <field name="lastname2" />
+                <field name="gender" />
+                <field name="birthdate_date" />
+                <field name="document_type" />
+                <field name="document_number" />
+                <field name="document_expedition_date" />
+                <field name="nationality_id" />
                 <field name="email" />
                 <field name="mobile" />
                 <field name="arrival" />
